order invoices by id desc + try to fix printing shift issue

--- a/public/css/ar.css
+++ b/public/css/ar.css
@@ -234,6 +234,8 @@ input, button{
 
 #printableContent{
     text-align: center !important;
+    margin    : 2mm !important;
+    padding   : 0 !important;
 }
 #printableContent table{
     text-align: center !important;
